# ggemtext

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
ggemtext/src/: lib.rs
src/: lib.rs  line.rs
src/line/: code.rs  header.rs  link.rs  list.rs  quote.rs
src/line/code/: error.rs  inline.rs  multiline.rs
src/line/code/inline/: gemtext.rs
src/line/code/multiline/: error.rs
src/line/header/: gemtext.rs  level.rs
src/line/list/: gemtext.rs
src/line/quote/: gemtext.rs
tests/: document.gmi  integration.gmi  integration.rs  integration_test.gmi  integration_test.rs
