[package]
name = "ggemtext"
version = "0.1.3"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Glib-oriented Gemtext API"
keywords = ["gemtext", "gemini", "gemini-protocol", "gtk", "glib"]
categories = [
    "development-tools",
    "parser-implementations",
    "parsing",
    "text-processing",
    "value-formatting",
]
repository = "https://github.com/YGGverse/ggemtext"

[dependencies.gtk]
package = "gtk4"
version = "0.9.1"
