[package]
name = "ggemtext"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Glib-oriented Gemtext API"
keywords = ["gemtext", "gemini", "gemini-protocol", "gtk", "glib"]
categories = [
    "development-tools",
    "parser-implementations",
    "parsing",
    "text-processing",
    "value-formatting",
]
repository = "https://github.com/YGGverse/ggemtext"

[dependencies.glib]
package = "glib"
version = "0.20.4"
features = ["v2_66"]
