[package]
name = "ggemtext"
version = "0.7.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Glib-oriented Gemtext API"
keywords = ["gemtext", "gemini", "gemini-protocol", "gtk", "glib"]
categories = [
    "development-tools",
    "parser-implementations",
    "parsing",
    "text-processing",
    "value-formatting",
]
repository = "https://github.com/YGGverse/ggemtext"

[dependencies.glib]
package = "glib"
version = "0.21.0"
features = ["v2_66"]
